[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "src"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/xinetzone/sphinx-demo"

[project.optional-dependencies]
doc = [
  "ablog",
  "myst-nb",
  "sphinx-thebe",
  "sphinx-copybutton",
  "sphinx-comments",
  "sphinx-book-theme",
  "sphinx>=4.4",
  "sphinxcontrib-mermaid",
]
dev = [
  "ablog",
  "myst-nb",
  "sphinx-thebe",
  "sphinx-copybutton",
  "sphinx-comments",
  "plotly",
  "pandas",
  "matplotlib",
  "sphinx-book-theme",
  "sphinx>=4.4",
  "sphinxcontrib-mermaid",
  "sphinx-panels",
  "sphinx-inline-tabs",
  "sphinx-automodapi",
  "witchhazel",
  "sphinx-sitemap"
]

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['docs', '.git', '.github']
